# Concu-proof-of-concept

./: Cargo.toml  readME
orders/: order1.json  orders1.json  orders1.yaml  orders2.json
src/: client.rs  ice_cream.rs  ice_cream_shop.rs  ice_cream_shop_test.rs  main.rs  order.rs  worker.rs
