[package]
name = "ice_cream_shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-rt = "2.2.0"
tokio = { version = "1", features = ["full"] }
shared = { path = "../shared" }
serde_yaml = "0.8.17"


